--- a/index.html
+++ b/index.html
@@ -271,6 +271,181 @@
         </div>
       </section>
       <!-- PRICING END -->
+      <!-- WORK START -->
+      <section class="container">
+        <div class="work">
+          <p>Our Work</p>
+          <div class="workContent">
+            <div>
+              <h2>
+                We don’t just design <br />websites we craft<br />
+                digital experiences
+              </h2>
+              <img src="assets/img/pixelportfolio.png" alt="Portfolio" />
+              <h3>
+                Every pixel you see <br />here is backed by<br />
+                strategy, passion, <br />and purpose
+              </h3>
+            </div>
+            <ul>
+              <li>
+                <img src="assets/img/port1.png" alt="Portfolio" />
+                <img src="assets/img/port2.png" alt="Portfolio" />
+              </li>
+              <li>
+                <img src="assets/img/port3.png" alt="Portfolio" width="" />
+                <img src="assets/img/port4.png" alt="Portfolio" width="" />
+                <img src="assets/img/port5.png" alt="Portfolio" width="" />
+              </li>
+              <li>
+                <img src="assets/img/port6.png" alt="Portfolio" width="" />
+                <img src="assets/img/port7.png" alt="Portfolio" width="" />
+                <img src="assets/img/port8.png" alt="Portfolio" width="" />
+              </li>
+              <li>
+                <img src="assets/img/port9.png" alt="Portfolio" />
+                <img src="assets/img/port10.png" alt="Portfolio" />
+              </li>
+              <img src="assets/img/lamp.png" alt="lmap" />
+              <p>We turn ideas <br />into magic</p>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <div class="container-fluid btm"></div>
+      <!-- WORK END -->
+      <!-- CONTACT US START -->
+      <section class="container">
+        <div class="contact">
+          <span>Talk to Us</span>
+          <h2>
+            Let’s Shape<br />
+            Tomorrow Together
+          </h2>
+          <div class="form">
+            <article>
+              <h4>
+                Let's build something great together, reach out now and let us
+                make it happen
+              </h4>
+
+              <a href="mailto:hello@pixelable.com"
+                ><img
+                  src="assets/img/envelope.png"
+                  alt="envelope"
+                />hello@pixelable.com</a
+              >
+            </article>
+            <div class="inner">
+              <p>Fill out the form below and we'll get back to you shortly</p>
+              <p><img src="assets/img/filter.png" alt="" /> Filters</p>
+              <form>
+                <div class="form-section">
+                  <label>Selected Plan</label>
+                  <div class="button-group">
+                    <div class="btn">Silver</div>
+                    <div class="btn selected">Diamond</div>
+                    <div class="btn">Gold</div>
+                    <div class="btn">Custom</div>
+                  </div>
+                </div>
+
+                <div class="form-section">
+                  <label>Plan Budget</label>
+                  <div class="button-group">
+                    <label class="radio-label"
+                      ><input type="radio" name="budget" value="2500" />$ 2500
+                      USD</label
+                    >
+                    <label class="radio-label"
+                      ><input
+                        type="radio"
+                        name="budget"
+                        value="7500"
+                        checked
+                      />$ 7500 USD</label
+                    >
+                    <label class="radio-label"
+                      ><input type="radio" name="budget" value="15000" />$ 15000
+                      USD</label
+                    >
+                    <label class="radio-label"
+                      ><input
+                        type="radio"
+                        name="budget"
+                        value="tbd"
+                      />TBD</label
+                    >
+                  </div>
+                </div>
+
+                <div class="form-section">
+                  <label>Select Services</label>
+                  <div class="button-group">
+                    <label class="radio-label"
+                      ><input
+                        type="radio"
+                        name="service"
+                        value="uiux"
+                      />UI/UX</label
+                    >
+                    <label class="radio-label"
+                      ><input
+                        type="radio"
+                        name="service"
+                        value="animation"
+                      />Animation</label
+                    >
+                    <label class="radio-label"
+                      ><input
+                        type="radio"
+                        name="service"
+                        value="wordpress"
+                      />Wordpress</label
+                    >
+                    <label class="radio-label"
+                      ><input
+                        type="radio"
+                        name="service"
+                        value="tbd"
+                      />TBD</label
+                    >
+                  </div>
+                </div>
+
+                <div class="form-section">
+                  <h3>ⓘ Basic Info</h3>
+                  <div class="input-group">
+                    <input
+                      type="text"
+                      placeholder="First Name"
+                      name="firstName"
+                    />
+                    <input
+                      type="text"
+                      placeholder="Last Name"
+                      name="lastName"
+                    />
+                  </div>
+                  <input
+                    type="email"
+                    placeholder="Email ID"
+                    name="email"
+                  /><br /><br />
+                  <textarea
+                    rows="4"
+                    placeholder="Message"
+                    name="message"
+                  ></textarea>
+                </div>
+
+                <button type="submit" class="send-btn">Send</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- CONTACT US END -->
     </main>
     <footer>
       <div class="container">
