pixelable pricing table

--- a/index.html
+++ b/index.html
@@ -256,17 +256,131 @@
       <!-- OUR SERVICES END -->
       <!-- PRICING START -->
       <section class="container-fluid bg-grey">
-        <div class="pricing">
+        <div class="container pricing">
           <div class="imgContent">
             <div>
               <span>Pricing</span>
-              <h2>We believe in transparent pricing with real value</h2>
+              <h2>
+                We believe in <br />transparent pricing <br />with real value
+              </h2>
               <p>
                 <b>Sailing your way, </b>
-                No hidden fees lurking beneath the surface.
+                No hidden fees lurking <br />beneath the surface.
               </p>
             </div>
             <img src="assets/img/boat.png" alt="boat" />
+          </div>
+          <div class="pricingTable">
+            <p>
+              Choose the package that<br />
+              suits your needs
+            </p>
+            <div class="pricing-container">
+              <!-- SILVER PLAN -->
+              <div class="plan silver">
+                <div class="firstSec">
+                  <div>
+                    <h2>SILVER</h2>
+                    <p class="description">
+                      Perfect for startups or<br />
+                      personal projects.
+                    </p>
+                  </div>
+                  <img src="assets/img/silver.png" alt="silver" />
+                </div>
+                <div class="price">
+                  <p>
+                    <span class="currency">$</span>
+                    <span class="amount">2500</span>
+                    <span class="unit">USD</span>
+                  </p>
+                </div>
+                <ul class="features">
+                  <li>150 Esdfadfa3ewe</li>
+                  <li>5 Esdfadfa3ewe</li>
+                  <li>2 GB Esdfadfa3ewe</li>
+                  <li><strong>500 GB</strong> Esdfadfa3ewe</li>
+                  <li>2 Esdfadfa3ewe</li>
+                  <li>6 Esdfadfa3ewe</li>
+                </ul>
+                <div class="selectPlan">
+                  <button>SELECT PLAN</button>
+                </div>
+              </div>
+              <!-- DIAMOND PLAN -->
+              <div class="plan diamond">
+                <div class="firstSec">
+                  <div>
+                    <h2>DIAMOND</h2>
+                    <p class="description">
+                      Ideal for small to medium<br />
+                      sized businesses.
+                    </p>
+                  </div>
+                  <img src="assets/img/diamond.png" alt="diamond" />
+                </div>
+
+                <div class="price">
+                  <p>
+                    <span class="currency">$</span>
+                    <span class="amount">7500.00</span>
+                    <span class="unit">USD</span>
+                  </p>
+                </div>
+                <ul class="features">
+                  <li>150 Esdfadfa3ewe</li>
+                  <li>5 Esdfadfa3ewe</li>
+                  <li><strong>2 GB</strong> Esdfadfa3ewe</li>
+                  <li><strong>500 GB</strong> Esdfadfa3ewe</li>
+                  <li>2 Esdfadfa3ewe</li>
+                  <li>6 Esdfadfa3ewe</li>
+                </ul>
+                <div class="mostPopular">
+                  <a class="">Most Popular</a>
+                </div>
+                <div class="selectPlan">
+                  <button>SELECT PLAN</button>
+                </div>
+              </div>
+              <!-- GOLD PLAN -->
+              <div class="plan gold">
+                <div class="firstSec">
+                  <div>
+                    <h2>GOLD</h2>
+                    <p class="description">
+                      Best for large, feature<br />
+                      rich websites
+                    </p>
+                  </div>
+                  <img src="assets/img/gold.png" alt="gold" />
+                </div>
+                <div class="price">
+                  <p>
+                    <span class="currency">$</span>
+                    <span class="amount">15000.00</span>
+                    <span class="unit">USD</span>
+                  </p>
+                </div>
+                <ul class="features">
+                  <li>150 Esdfadfa3ewe</li>
+                  <li>5 Esdfadfa3ewe</li>
+                  <li>2 GB Esdfadfa3ewe</li>
+                  <li><strong>500 GB</strong> Esdfadfa3ewe</li>
+                  <li>2 Esdfadfa3ewe</li>
+                  <li>6 Esdfadfa3ewe</li>
+                </ul>
+                <div class="selectPlan">
+                  <button>SELECT PLAN</button>
+                </div>
+              </div>
+            </div>
+
+            <div class="customPlanNote">
+              <p>
+                <strong>Custom Plan</strong> Not seeing what you need? Let’s
+                create a plan just for you <a href="#">Request Custom Quote</a>
+              </p>
+            </div>
           </div>
         </div>
       </section>
