pixelable bannner objects

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
             <a href="#">Discover Our Magic</a>
           </div>
         </div>
+        <div class="objects">
+          <img src="assets/img/Object1.svg" alt="Object1" />
+          <img src="assets/img/Object2.png" alt="Object2" />
+          <img src="assets/img/Object3.png" alt="Object3" />
+          <img src="assets/img/Object4.png" alt="Object4" />
+        </div>
       </section>
       <!-- HERO BANNER END-->
       <!-- ABOUT US  START-->
@@ -455,6 +461,7 @@
             <div class="inner">
               <p>Fill out the form below and we'll get back to you shortly</p>
               <p><img src="assets/img/filter.png" alt="" /> Filters</p>
+
               <form class="form-container" onsubmit="handleSubmit(event)">
                 <div class="form-section">
                   <div class="form-section-label">Selected Plan</div>
@@ -596,7 +603,7 @@
             </li>
           </ul>
         </div>
-        <a href="back2Top">
+        <a id="backToTop">
           <img src="assets/img/back2Top.svg" alt="logo" />
           <p>Back to Top</p>
         </a>
