pixelable bannner objects animation

--- a/index.html
+++ b/index.html
@@ -37,10 +37,26 @@
           </div>
         </div>
         <div class="objects">
-          <img src="assets/img/Object1.svg" alt="Object1" />
-          <img src="assets/img/Object2.png" alt="Object2" />
-          <img src="assets/img/Object3.png" alt="Object3" />
-          <img src="assets/img/Object4.png" alt="Object4" />
+          <img
+            src="assets/img/Object1.svg"
+            alt="Object1"
+            class="object object1"
+          />
+          <img
+            src="assets/img/Object2.png"
+            alt="Object2"
+            class="object object2"
+          />
+          <img
+            src="assets/img/Object3.png"
+            alt="Object3"
+            class="object object3"
+          />
+          <img
+            src="assets/img/Object4.png"
+            alt="Object4"
+            class="object object4"
+          />
         </div>
       </section>
       <!-- HERO BANNER END-->
@@ -609,6 +625,7 @@
         </a>
       </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="/assets/script.js"></script>
   </body>
 </html>
