pixelable woek sec

--- a/index.html
+++ b/index.html
@@ -427,24 +427,70 @@
             </div>
             <ul>
               <li>
-                <img src="assets/img/port1.png" alt="Portfolio" />
-                <img src="assets/img/port2.png" alt="Portfolio" />
+                <img
+                  src="assets/img/port1.png"
+                  alt="Portfolio"
+                  class="project"
+                />
+                <img
+                  src="assets/img/port2.png"
+                  alt="Portfolio"
+                  class="project"
+                />
               </li>
               <li>
-                <img src="assets/img/port3.png" alt="Portfolio" width="" />
-                <img src="assets/img/port4.png" alt="Portfolio" width="" />
-                <img src="assets/img/port5.png" alt="Portfolio" width="" />
+                <img
+                  src="assets/img/port3.png"
+                  alt="Portfolio"
+                  class="project"
+                  width=""
+                />
+                <img
+                  src="assets/img/port4.png"
+                  alt="Portfolio"
+                  class="project"
+                  width=""
+                />
+                <img
+                  src="assets/img/port5.png"
+                  alt="Portfolio"
+                  class="project"
+                  width=""
+                />
               </li>
               <li>
-                <img src="assets/img/port6.png" alt="Portfolio" width="" />
-                <img src="assets/img/port7.png" alt="Portfolio" width="" />
-                <img src="assets/img/port8.png" alt="Portfolio" width="" />
+                <img
+                  src="assets/img/port6.png"
+                  alt="Portfolio"
+                  class="project"
+                  width=""
+                />
+                <img
+                  src="assets/img/port7.png"
+                  alt="Portfolio"
+                  class="project"
+                  width=""
+                />
+                <img
+                  src="assets/img/port8.png"
+                  alt="Portfolio"
+                  class="project"
+                  width=""
+                />
               </li>
               <li>
-                <img src="assets/img/port9.png" alt="Portfolio" />
-                <img src="assets/img/port10.png" alt="Portfolio" />
+                <img
+                  src="assets/img/port9.png"
+                  alt="Portfolio"
+                  class="project"
+                />
+                <img
+                  src="assets/img/port10.png"
+                  alt="Portfolio"
+                  class="project"
+                />
               </li>
-              <img src="assets/img/lamp.png" alt="lmap" />
+              <img src="assets/img/lamp.png" alt="lmap" class="lamp" />
               <p>We turn ideas <br />into magic</p>
             </ul>
           </div>
@@ -626,6 +672,9 @@
       </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
+    <!-- GSAP ScrollTrigger Plugin -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="/assets/script.js"></script>
   </body>
 </html>
