--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Pixelable" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dist/style.css" />
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
@@ -360,7 +361,7 @@
                   <li>6 Esdfadfa3ewe</li>
                 </ul>
                 <div class="mostPopular">
-                  <a class="">Most Popular</a>
+                  <a class="" href="#">Most Popular</a>
                 </div>
                 <div class="selectPlan">
                   <button>SELECT PLAN</button>
@@ -425,74 +426,76 @@
                 strategy, passion, <br />and purpose
               </h3>
             </div>
-            <ul>
-              <li>
-                <img
-                  src="assets/img/port1.png"
-                  alt="Portfolio"
-                  class="project"
-                />
-                <img
-                  src="assets/img/port2.png"
-                  alt="Portfolio"
-                  class="project"
-                />
-              </li>
-              <li>
-                <img
-                  src="assets/img/port3.png"
-                  alt="Portfolio"
-                  class="project"
-                  width=""
-                />
-                <img
-                  src="assets/img/port4.png"
-                  alt="Portfolio"
-                  class="project"
-                  width=""
-                />
-                <img
-                  src="assets/img/port5.png"
-                  alt="Portfolio"
-                  class="project"
-                  width=""
-                />
-              </li>
-              <li>
-                <img
-                  src="assets/img/port6.png"
-                  alt="Portfolio"
-                  class="project"
-                  width=""
-                />
-                <img
-                  src="assets/img/port7.png"
-                  alt="Portfolio"
-                  class="project"
-                  width=""
-                />
-                <img
-                  src="assets/img/port8.png"
-                  alt="Portfolio"
-                  class="project"
-                  width=""
-                />
-              </li>
-              <li>
-                <img
-                  src="assets/img/port9.png"
-                  alt="Portfolio"
-                  class="project"
-                />
-                <img
-                  src="assets/img/port10.png"
-                  alt="Portfolio"
-                  class="project"
-                />
-              </li>
+            <div class="portfolio">
+              <ul>
+                <li>
+                  <img
+                    src="assets/img/port1.png"
+                    alt="Portfolio"
+                    class="project"
+                  />
+                  <img
+                    src="assets/img/port2.png"
+                    alt="Portfolio"
+                    class="project"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="assets/img/port3.png"
+                    alt="Portfolio"
+                    class="project"
+                    width=""
+                  />
+                  <img
+                    src="assets/img/port4.png"
+                    alt="Portfolio"
+                    class="project"
+                    width=""
+                  />
+                  <img
+                    src="assets/img/port5.png"
+                    alt="Portfolio"
+                    class="project"
+                    width=""
+                  />
+                </li>
+                <li>
+                  <img
+                    src="assets/img/port6.png"
+                    alt="Portfolio"
+                    class="project"
+                    width=""
+                  />
+                  <img
+                    src="assets/img/port7.png"
+                    alt="Portfolio"
+                    class="project"
+                    width=""
+                  />
+                  <img
+                    src="assets/img/port8.png"
+                    alt="Portfolio"
+                    class="project"
+                    width=""
+                  />
+                </li>
+                <li>
+                  <img
+                    src="assets/img/port9.png"
+                    alt="Portfolio"
+                    class="project"
+                  />
+                  <img
+                    src="assets/img/port10.png"
+                    alt="Portfolio"
+                    class="project"
+                  />
+                </li>
+              </ul>
               <img src="assets/img/lamp.png" alt="lmap" class="lamp" />
               <p>We turn ideas <br />into magic</p>
-            </ul>
+            </div>
           </div>
         </div>
       </section>
@@ -508,10 +511,10 @@
           </h2>
           <div class="form">
             <article>
-              <h4>
+              <h3>
                 Let's build something great together, reach out now and let us
                 make it happen
-              </h4>
+              </h3>
 
               <a href="mailto:hello@pixelable.com"
                 ><img
