--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
     ></script>
 
-    <!-- GSAP ScrollTrigger Plugin -->
+    <!-- GSAP ScrollTrigger Plugin --->
     <script
       async
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"
