--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
       <section class="heroBanner">
         <div class="container">
           <header>
-            <a href="/"><img src="assets/img/logo.svg" alt="logo" /></a>
-            <nav>
+            <div class="hamburger">
+              <button id="menuToggle" aria-label="Open menu">&#9776;</button>
+            </div>
+
+            <a href="/" class="logo"
+              ><img src="assets/img/logo.svg" alt="logo"
+            /></a>
+
+            <nav class="mobileMenu">
               <ul>
                 <li><a href="">Home </a></li>
                 <li><a href="">About Us </a></li>
@@ -26,7 +33,7 @@
                 <li><a href="">Contact Us </a></li>
               </ul>
             </nav>
-            <div><a href="#">Hire Us!</a></div>
+            <div class="mobileRight"><a href="#">Hire Us!</a></div>
           </header>
           <div class="heroBannerContent">
             <h1>We Are A Creative design Agency</h1>
