--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <section class="heroBanner">
         <div class="container">
           <header>
-            <div class="hamburger">
-              <button id="menuToggle" aria-label="Open menu">&#9776;</button>
-            </div>
+            <button id="menuToggle" class="hamburger" aria-label="Toggle menu">
+              &#9776;
+            </button>
 
             <a href="/" class="logo"
               ><img src="assets/img/logo.svg" alt="logo"
@@ -281,6 +281,11 @@
                 On page & technical SEO to ensure your website is discoverable,
                 fast & ranks high on search engines.
               </p>
+            </div>
+            <div class="slider-controls">
+              <button class="prev">&#10094;</button>
+              <div class="dots"></div>
+              <button class="next">&#10095;</button>
             </div>
           </div>
         </div>
@@ -687,10 +692,7 @@
     ></script>
 
     <!-- GSAP ScrollTrigger Plugin --->
-    <script
-      async
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"
-    ></script>
-    <script async src="/assets/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script async src="assets/script.js"></script>
   </body>
 </html>
