--- a/index.html
+++ b/index.html
@@ -282,11 +282,6 @@
                 fast & ranks high on search engines.
               </p>
             </div>
-            <div class="slider-controls">
-              <button class="prev">&#10094;</button>
-              <div class="dots"></div>
-              <button class="next">&#10095;</button>
-            </div>
           </div>
         </div>
       </section>
@@ -312,6 +307,14 @@
               Choose the package that<br />
               suits your needs
             </p>
+            <div class="mobilePlanSelector" id="mobilePlanSelector">
+              <select id="planSelector">
+                <option value="silver" selected>Silver</option>
+                <option value="diamond">Diamond</option>
+                <option value="gold">Gold</option>
+              </select>
+            </div>
+
             <div class="pricing-container">
               <!-- SILVER PLAN -->
               <div class="plan silver">
