--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                       sized businesses.
                     </p>
                   </div>
-                  <img src="assets/img/diamond.png" alt="diamond" />
+                  <img src="assets/img/diamond.png" alt="diamond" width="auto"/>
                 </div>
 
                 <div class="price">
